# mongo-task-generator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  evergreen.landscape.yml  evergreen.yml
.config/: nextest.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/: generating_tasks.md
src/: configuration.rs  evergreen_names.rs  evg_config.rs  evg_config_utils.rs  generate_sub_tasks_config.rs  lib.rs  main.rs  resmoke_proxy.rs  task_name.rs
src/evergreen/: evg_config.rs  evg_config_utils.rs  evg_task_history.rs  mod.rs
src/resmoke/: burn_in_proxy.rs  external_cmd.rs  mod.rs  resmoke_proxy.rs  resmoke_suite.rs
src/services/: config_extraction.rs  mod.rs
src/task_types/: burn_in_tests.rs  fuzzer_tasks.rs  generated_suite.rs  mod.rs  multiversion.rs  resmoke_config_writer.rs  resmoke_tasks.rs
src/utils/: fs_service.rs  mod.rs  task_name.rs
tests/: integration_test.rs
tests/data/: evergreen.yml  sample_bazel_suite_configs.yml  sample_evergreen_auth.yml  sample_expansions.yml
tests/data/burn_in/: evergreen_burn_in_tasks_no_tasks.yml  evergreen_burn_in_tasks_with_large_distro_task.yml  evergreen_burn_in_tasks_with_no_tasks.yml  evergreen_burn_in_tasks_with_non_large_distro_task.yml  evergreen_burn_in_tasks_with_two_tasks.yml  evergreen_with_empty_burn_in_variants.yml  evergreen_with_no_burn_in_distro.yml  evergreen_with_no_burn_in_task_group.yml  evergreen_with_no_burn_in_variants.yml
tests/data/tests/: test_0.js  test_1.js  test_10.js  test_11.js  test_12.js  test_13.js  test_14.js  test_2.js  test_3.js  test_4.js  test_5.js  test_6.js  test_7.js  test_8.js  test_9.js
tests/mocks/: burn_in_tests.py  resmoke.py
