[package]
name = "mongo-task-generator"
description = "Dynamically split evergreen tasks into subtasks for testing the 10gen/mongo project."
license = "Apache-2.0"
version = "0.7.24"
repository = "https://github.com/mongodb/mongo-task-generator"
authors = ["DevProd Correctness Team <devprod-correctness-team@mongodb.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
chrono = "0.4.38"
clap = "4.5.15"
cmd_lib = "1.9.4"
futures = "0.3.30"
lazy_static = "1.5.0"
maplit = "1.0.2"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.33"
shellexpand = "3.1.0"
shrub-rs = "0.5.5"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "fmt", "std"] }


[dev-dependencies]
assert_cmd = "2.0.16"
cargo-nextest = "0.9.72"
rstest = "0.22.0"
simple-error = "0.3.1"
tempdir = "0.3.7"

[profile.release]
opt-level = 3
lto = "thin"
