[package]
name = "mongo-task-generator"
description = "Dynamically split evergreen tasks into subtasks for testing the 10gen/mongo project."
license = "Apache-2.0"
version = "2.0.0"
repository = "https://github.com/mongodb/mongo-task-generator"
authors = ["DevProd Correctness Team <devprod-correctness-team@mongodb.com>"]
edition = "2018"
rust-version = "1.81"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
aws-config = "1.0.1"
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
chrono = "0.4.38"
clap = "4.5.15"
lazy_static = "1.5.0"
maplit = "1.0.2"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.33"
shellexpand = "3.1.0"
shrub-rs = "0.6.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "fmt", "std"] }


[dev-dependencies]
assert_cmd = "2.0.16"
cargo-nextest = "0.9.72"
rstest = "0.22.0"
simple-error = "0.3.1"
tempdir = "0.3.7"

[profile.release]
opt-level = 3
lto = "thin"
